<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/ndquedadas"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_buscar_quedadas" />
        <item
            android:id="@+id/ndmapa"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/nav_buscar_mapa" />
    </group>

    <item
        android:id="@+id/ndconfig"
        android:title="@string/nav_configuración">
        <menu>
            <item
                android:id="@+id/ndPreferencias"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_preferencias"/>
            <item
                android:id="@+id/ndLogout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/nav_cerrar_sesion"/>
        </menu>
    </item>

</menu>