<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.usuario.redsports.alta_encuentro.AltaEncuentro2">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@drawable/nav_background"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:paddingTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:id="@+id/tvTituloToolbar"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="right" />

            <TextView
                android:paddingTop="3dp"
                android:id="@+id/tvSubtituloToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/toolbar_subtitulo"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fecha_hora"
        android:layout_margin="15dp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_hora"
                android:id="@+id/textView2"
                android:layout_gravity="center_horizontal"
                android:padding="5dp"
                android:gravity="center_horizontal" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Holo.Spinner"
                android:id="@+id/btnFecha"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/fecha" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@android:style/Widget.Holo.Spinner"
                android:id="@+id/btnHora"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:text="@string/hora" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asistencia"
        android:layout_marginLeft="15dp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1.5">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_spinner"
                android:id="@+id/textView4"
                android:layout_margin="5dp"
                android:textStyle="bold" />

            <NumberPicker
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:id="@+id/numberPicker" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spinner_acompañantes"
            android:id="@+id/textv"
            android:layout_margin="5dp"
            android:textStyle="bold" />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinner"
            android:entries="@array/spinner_array"
            android:prompt="@string/spinner_titulo"
            android:spinnerMode="dropdown" />
        </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnCrear"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:textSize="14sp"
        android:layout_margin="5dp"
        android:text="@string/crear"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/raisedbutton"
        android:layout_weight="2.5"
        android:layout_gravity="center"
        android:textStyle="bold" />

</LinearLayout>
