<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.usuario.redsports.alta_encuentro.AltaEncuentro1">

    <android.support.v7.widget.Toolbar xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/toolbar"
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:minHeight="?attr/actionBarSize"
        android:elevation="4dp"
        android:background="@drawable/nav_background"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal">

            <TextView
                android:paddingTop="3dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/app_name"
                android:id="@+id/tvTituloToolbar"
                android:textStyle="bold"
                android:textSize="20sp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="right" />

            <TextView
                android:paddingTop="3dp"
                android:id="@+id/tvSubtituloToolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:text="@string/toolbar_subtitulo"
                android:layout_weight="1"
                android:layout_gravity="center_vertical" />
        </LinearLayout>
    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/encuentro"
        android:layout_margin="15dp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Spinner
                android:layout_width="210dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinnerDeporte"
                android:prompt="@string/spinner_titulo"
                android:spinnerMode="dropdown"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp" />

            <EditText
                android:id="@+id/etDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="100"
                android:imeOptions="actionDone"
                android:lines="3"
                android:theme="@style/CampoTextoRojo"
                android:hint="@string/hint_ejemplo"
                android:minLines="2"
                android:textSize="16sp"
                android:maxLines="3"
                android:layout_margin="5dp" />

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lugar"
        android:layout_marginLeft="15dp"
        android:textStyle="bold" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:layout_weight="1.5">

        <fragment
            android:id="@+id/mapEncuentro"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.usuario.redsports.alta_encuentro.AltaEncuentro1" />
    </android.support.v7.widget.CardView>

    <Button
        android:id="@+id/btnSiguiente"
        android:layout_width="150dp"
        android:layout_height="match_parent"
        android:textSize="14sp"
        android:text="@string/siguiente"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:background="@drawable/raisedbutton"
        android:layout_weight="2.5"
        android:layout_gravity="center" />

</LinearLayout>
