<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/nav_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_height="match_parent">

    <fr.castorflex.android.smoothprogressbar.SmoothProgressBar
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="invisible"
        app:spb_sections_count="4"
        app:spb_color="@color/colorBlanco"
        app:spb_speed="2.0"
        app:spb_stroke_width="4dp"
        app:spb_stroke_separator_length="4dp"
        app:spb_reversed="false"
        app:spb_mirror_mode="false"
        app:spb_progressiveStart_activated="true"
        app:spb_progressiveStart_speed="1.5"
        app:spb_progressiveStop_speed="3.4"
        android:id="@+id/progressbar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/tvTitulo"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textSize="35sp"
        android:textStyle="bold"
        android:layout_weight="1" />


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view3"
        android:layout_weight="1" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:id="@+id/imUser"
            android:src="@drawable/icon_new_user"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/etUserN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLength="15"
            android:hint="@string/alta_usuario"
            android:theme="@style/CampoTextoBlanco"
            android:textColorHint="@color/colorBlanco"
            android:textColor="@color/colorBlanco"
            android:layout_margin="10dp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:id="@+id/imPass"
            android:src="@drawable/icon_new_pass"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp" />

        <EditText
            android:id="@+id/etContrasenaN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:singleLine="true"
            android:maxLength="20"
            android:inputType="textPassword"
            android:hint="@string/alta_contrasena"
            android:theme="@style/CampoTextoBlanco"
            android:textColorHint="@color/colorBlanco"
            android:textColor="@color/colorBlanco"
            android:layout_margin="16dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="17dp"
            android:layout_height="17dp"
            android:id="@+id/imPass2"
            android:src="@drawable/icon_new_pass"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp" />

        <EditText
            android:id="@+id/etContrasenaN2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:maxLength="20"
            android:inputType="textPassword"
            android:hint="@string/alta_contrasena2"
            android:theme="@style/CampoTextoBlanco"
            android:textColorHint="@color/colorBlanco"
            android:textColor="@color/colorBlanco"
            android:layout_margin="16dp" />

    </LinearLayout>


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/view2"
        android:layout_weight="2" />

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/alta_crear_usuario"
        android:id="@+id/btnOkN"
        android:background="@drawable/bordes_boton"
        android:theme="@style/AppTheme.Button"
        android:textSize="15sp"
        android:textStyle="bold"
        android:layout_weight="0.3" />

</LinearLayout>